crates/abq_cli/tests/snapshots/cli__invalid_abq_option_before_test_command.snap
---
source: crates/abq_cli/tests/cli.rs
expression: stderr
---
error: unexpected argument '--zzz-not-an-abq-option' found

  tip: to pass '--zzz-not-an-abq-option' as a value, use '-- --zzz-not-an-abq-option'

Usage: abq test [OPTIONS] -- <ARGS>...

For more information, try '--help'.
