crates/abq_cli/tests/snapshots/cli__retries_displays_retry_banners.snap
---
source: crates/abq_cli/tests/cli.rs
expression: sanitize_output(&stdout)
---
--------------------------------------------------------------------------------
---------------------------------- ABQ RETRY -----------------------------------
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
---------------------------------- ABQ RETRY -----------------------------------
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
---------------------------------- ABQ RETRY -----------------------------------
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
---------------------------------- ABQ RETRY -----------------------------------
--------------------------------------------------------------------------------



--------------------------------------------------------------------------------
------------------------------------- ABQ --------------------------------------
--------------------------------------------------------------------------------

Finished in XX seconds (XX seconds spent in test code)
64 tests, 64 failures, 64 retried

Failures:
    64   a/b/x.file

