crates/abq_cli/tests/snapshots/cli__work_admin_token_without_user_token.snap
---
source: crates/abq_cli/tests/cli.rs
expression: stderr
---
error: the following required arguments were not provided:
  --user-token <USER_TOKEN>

Usage: abq start --admin-token <ADMIN_TOKEN> --user-token <USER_TOKEN>

For more information, try '--help'.

