crates/abq_cli/tests/snapshots/cli__work_no_queue_addr_or_access_token.snap
---
source: crates/abq_cli/tests/cli.rs
expression: stderr
---
error: the following required arguments were not provided:
  <--access-token <ACCESS_TOKEN>|--queue-addr <QUEUE_ADDR>>

Usage: abq work --working-dir <WORKING_DIR> --run-id <RUN_ID> --num <NUM> <--access-token <ACCESS_TOKEN>|--queue-addr <QUEUE_ADDR>>

For more information, try '--help'.

