crates/abq_cli/tests/snapshots/cli__work_no_queue_addr_or_api_key.snap
---
source: crates/abq_cli/tests/cli.rs
expression: stderr
---
error: One of --api-key <API_KEY> or --queue-addr <QUEUE_ADDR> must be provided.

Usage: work [OPTIONS] --working-dir <WORKING_DIR>

For more information try '--help'

